--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5ee03bad36.js" crossorigin="anonymous"></script>
 
-    <title>React App</title>
+    <title>Crowdfunding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
